--- a/office-2019/index.html
+++ b/office-2019/index.html
@@ -15,8 +15,8 @@
   <meta content='Office Configuration Generator' property='og:title' />
   <meta content='Configuration options for the Office Deployment Tool' property='og:description' />
   <meta content='summary_large_image' name='twitter:card' />
-  <meta content='@chuanghiduoc9' name='twitter:site' />
-  <meta content='@chuanghiduoc9' name='twitter:creator' />
+  <meta content='' name='twitter:site' />
+  <meta content='' name='twitter:creator' />
   <meta content='https://cdn.KProtect.com/deployment/office-2019/' name='twitter:domain' />
   <meta content='https://cdn.KProtect.com/deployment/office-2019/' name='twitter:url' />
   <meta content='KProtect' name='twitter:title' />
@@ -57,7 +57,7 @@
           <li><a target="blank" href="https://www.microsoft.com/en-us/download/confirmation.aspx?id=49117"><i class="glyphicon glyphicon-star"></i> Deployment Tool</a></li>
           <li><a target="blank" href="https://docs.microsoft.com/en-us/DeployOffice/office2019/deploy"><i class="glyphicon glyphicon-education"></i> Reference for Click-to-Run</a></li>
           <li><a target="blank" href="https://support.office.com/en-us/article/uninstall-office-from-a-pc-9dd49b83-264a-477a-8fcc-2fdf5dbf61d8"><i class="glyphicon glyphicon-remove"></i> Uninstall Office</a></li>
-          <li><a target="blank" href="https://www.facebook.com/ChuaNghiDuoc9"><i class="glyphicon glyphicon-envelope"></i> Contact</a></li>
+          <li><a target="blank" href="https:https://www.facebook.com/hoangmanhkhiem.IT"><i class="glyphicon glyphicon-envelope"></i> Contact</a></li>
         </ul>
       </div>
     </div>
