--- a/office-365/index.html
+++ b/office-365/index.html
@@ -15,8 +15,8 @@
   <meta content='Office 365 Configuration Generator' property='og:title' />
   <meta content='Configuration options for the Office Deployment Tool' property='og:description' />
   <meta content='summary_large_image' name='twitter:card' />
-  <meta content='@chuanghiduoc' name='twitter:site' />
-  <meta content='@ChuaNghiDuoc' name='twitter:creator' />
+  <meta content='' name='twitter:site' />
+  <meta content='' name='twitter:creator' />
   <meta content='https://cdn.KProtect.com/deployment/office-365/' name='twitter:domain' />
   <meta content='https://cdn.KProtect.com/deployment/office-365/' name='twitter:url' />
   <meta content='KProtect' name='twitter:title' />
@@ -52,7 +52,7 @@
           <li class="nav-item"><a target="blank" href="//www.microsoft.com/en-us/download/confirmation.aspx?id=49117">Deployment Tool</a></li>
           <li class="nav-item"><a target="blank" href="//docs.microsoft.com/en-us/DeployOffice/office2019/deploy">Reference for Click-to-Run</a></li>
           <li class="nav-item"><a target="blank" href="//support.office.com/en-us/article/uninstall-office-from-a-pc-9dd49b83-264a-477a-8fcc-2fdf5dbf61d8">Uninstall Office</a></li>
-          <li class="nav-item"><a target="blank" href="//www.facebook.com/ChuaNghiDuoc9">Contact</a></li>
+          <li class="nav-item"><a target="blank" href="https://www.facebook.com/hoangmanhkhiem.IT">Contact</a></li>
         </ul>
       </div>
     </div>
